--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="sample_code">sample code</string>
     <string name="code_styles">code styles</string>
     <string name="code_style">code style</string>
+    <string name="duplicate">duplicate</string>
 </resources>
