--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="code_styles">code styles</string>
     <string name="code_style">code style</string>
     <string name="duplicate">duplicate</string>
+    <string name="install_python">install python</string>
 </resources>
